--- a/app.json
+++ b/app.json
@@ -31,26 +31,26 @@
       {
         "pagePath": "pages/home/home",
         "text": "主页",
-        "iconPath": "",
-        "selectedIconPath": ""
+        "iconPath": "pages/icon/home_1.png",
+        "selectedIconPath": "pages/icon/home_2.png"
       },
       {
         "pagePath": "pages/study/study",
         "text": "学习圈",
-        "iconPath": "",
-        "selectedIconPath": ""
+        "iconPath": "pages/icon/circle_1.png",
+        "selectedIconPath": "pages/icon/circle_2.png"
       },
       {
         "pagePath": "pages/more/more",
         "text": "更多",
-        "iconPath": "",
-        "selectedIconPath": ""
+        "iconPath": "pages/icon/more_1.png",
+        "selectedIconPath": "pages/icon/more_2.png"
       },
       {
         "pagePath": "pages/mine/mine",
         "text": "我的",
-        "iconPath": "",
-        "selectedIconPath": ""
+        "iconPath": "pages/icon/mine_1.png",
+        "selectedIconPath": "pages/icon/mine_2.png"
       }
     ]
   }
