--- a/project.config.json
+++ b/project.config.json
@@ -12,7 +12,7 @@
 	},
 	"compileType": "miniprogram",
 	"libVersion": "2.6.2",
-	"appid": "wx7c7bcd7669259e81",
+	"appid": "wxca749ba76d8ea54b",
 	"projectname": "educationApp",
 	"isGameTourist": false,
 	"condition": {
